--- a/Edureka/Untitled.ipynb
+++ b/Edureka/Untitled.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3eb5486f",
+   "execution_count": 36,
+   "id": "b44be22f",
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d85be704",
+   "execution_count": 37,
+   "id": "b2e10614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +53,14 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "251b9573",
+   "execution_count": 38,
+   "id": "cafb8b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ed4202de",
+   "execution_count": 39,
+   "id": "3cd4403a",
    "metadata": {},
    "outputs": [
     {
@@ -88,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "29ea2077",
+   "execution_count": 40,
+   "id": "35a067d6",
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2221d798",
+   "execution_count": 41,
+   "id": "e6897f2c",
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "46dc1655",
+   "execution_count": 42,
+   "id": "78d70cce",
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9c91f587",
+   "execution_count": 43,
+   "id": "420273f7",
    "metadata": {},
    "outputs": [
     {
@@ -186,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3e5b55fd",
+   "execution_count": 44,
+   "id": "f13d5f96",
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "cc9ad7e4",
+   "execution_count": 45,
+   "id": "a614ef36",
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +231,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "8cc93c25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = dataset.values\n",
+    "X = array[:,0:4]\n",
+    "Y = array[:,4]\n",
+    "validation_size = 0.20\n",
+    "seed = 6\n",
+    "X_train , X_test , Y_train , T_test = model_selection.train_test_split(X , Y , test_size = validation_size, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c0a03264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 6\n",
+    "scoring = 'accuracy'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "26b7a161",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Setting a random_state has no effect since shuffle is False. You should leave random_state to its default (None), or set shuffle=True.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[48], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m names \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name , model \u001b[38;5;129;01min\u001b[39;00m models:\n\u001b[1;32m---> 13\u001b[0m     kfold \u001b[38;5;241m=\u001b[39m \u001b[43mKFold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_splits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mseed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m     cv_results \u001b[38;5;241m=\u001b[39m model_selection\u001b[38;5;241m.\u001b[39mcross_val_score(model , X_train, Y_train, cv \u001b[38;5;241m=\u001b[39m kfold,scoring \u001b[38;5;241m=\u001b[39m scoring)\n\u001b[0;32m     15\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend(cv_results)\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:451\u001b[0m, in \u001b[0;36mKFold.__init__\u001b[1;34m(self, n_splits, shuffle, random_state)\u001b[0m\n\u001b[0;32m    450\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, n_splits\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m*\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m--> 451\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mn_splits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_splits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshuffle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrandom_state\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:308\u001b[0m, in \u001b[0;36m_BaseKFold.__init__\u001b[1;34m(self, n_splits, shuffle, random_state)\u001b[0m\n\u001b[0;32m    305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshuffle must be True or False; got \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(shuffle))\n\u001b[0;32m    307\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m shuffle \u001b[38;5;129;01mand\u001b[39;00m random_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:  \u001b[38;5;66;03m# None is the default\u001b[39;00m\n\u001b[1;32m--> 308\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    309\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSetting a random_state has no effect since shuffle is \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    310\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFalse. You should leave \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    311\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrandom_state to its default (None), or set shuffle=True.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    312\u001b[0m     )\n\u001b[0;32m    314\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_splits \u001b[38;5;241m=\u001b[39m n_splits\n\u001b[0;32m    315\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshuffle \u001b[38;5;241m=\u001b[39m shuffle\n",
+      "\u001b[1;31mValueError\u001b[0m: Setting a random_state has no effect since shuffle is False. You should leave random_state to its default (None), or set shuffle=True."
+     ]
+    }
+   ],
+   "source": [
+    "#spot check algorithm\n",
+    "models = []\n",
+    "models.append(('LR',LogisticRegression()))\n",
+    "models.append(('LDA',LinearDiscriminantAnalysis()))\n",
+    "models.append(('KNN' , KNeighborsClassifier()))\n",
+    "models.append(('CART' , DecisionTreeClassifier()))\n",
+    "models.append(('NB' , GaussianNB()))\n",
+    "models.append(('SVM' , SVC()))\n",
+    "#evaluatie each model in turn\n",
+    "results = []\n",
+    "names = []\n",
+    "for name , model in models:\n",
+    "    kfold = KFold(n_splits=10, random_state=seed)\n",
+    "    cv_results = model_selection.cross_val_score(model , X_train, Y_train, cv = kfold,scoring = scoring)\n",
+    "    results.append(cv_results)\n",
+    "    names.append(name)\n",
+    "    msg = \"%s: %f (%f)\" %(name,cv_results.mean() , cv_results.std())\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "62c1545d",
+   "id": "fd9e01d1",
    "metadata": {},
    "outputs": [],
    "source": []
