--- a/ml/Association Rule/1. Apriori.ipynb
+++ b/ml/Association Rule/1. Apriori.ipynb
@@ -36,24 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "1ecbcc68",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'apyori'",
+     "ename": "NameError",
+     "evalue": "name 'transactions' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mapyori\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m apriori\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'apyori'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mapyori\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m apriori\n\u001b[1;32m----> 2\u001b[0m rules \u001b[38;5;241m=\u001b[39m apriori(\u001b[43mtransactions\u001b[49m, min_support\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.003\u001b[39m, min_confidence\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m,min_lift\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,min_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'transactions' is not defined"
      ]
     }
    ],
    "source": [
-    "from apyori import apriori"
+    "from apyori import apriori\n",
+    "rules = apriori(transactions, min_support=0.003, min_confidence=0.2,min_lift=3,min_length=2)"
    ]
   },
   {
